# AdaCLIP

./: .gitattributes  .gitignore  README.md  pyproject.toml  test.py  train.py
configs/pipeline/: adaclip_baseline.yaml  adaclip_cir_false_color.yaml
cuvis_ai_adaclip/: __init__.py  adaclip_upstream.py  cli_utils.py
cuvis_ai_adaclip/examples_cuvis/: README.md  statistical_adaclip_channel_selector.py  statistical_baseline.py  statistical_cir_false_color.py  statistical_cir_false_rg_color.py  statistical_high_contrast.py  statistical_supervised_cir.py  statistical_supervised_full_spectrum.py  statistical_supervised_windowed_false_rgb.py
cuvis_ai_adaclip/node/: __init__.py  adaclip_node.py
method/: adaclip.py  trainer.py
tests/: test_adaclip.py  test_cuvis_ai_adaclip.py
